[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/player_icon.png" type="Texture" id=1]
[ext_resource path="res://UI/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Missile Launcher/MissileLauncher.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Particles/StarFieldBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://Timer/Timer.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/UITheme.tres" type="Theme" id=7]
[ext_resource path="res://SingleScenes/Main.gd" type="Script" id=8]
[ext_resource path="res://Player/PlayerLives.gd" type="Script" id=9]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 0.06
glow_blend_mode = 0

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.7, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 38
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "ShowAnim"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 60.5, 575 ), Vector2( 60.4999, 45 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeInOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="StarFieldBackground" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 460.5, 270 )

[node name="MissileLaunchers" type="Node2D" parent="."]

[node name="Right" parent="MissileLaunchers" instance=ExtResource( 3 )]
position = Vector2( -100, 270 )

[node name="Left" parent="MissileLaunchers" instance=ExtResource( 3 )]
position = Vector2( 1021, 270 )

[node name="Up" parent="MissileLaunchers" instance=ExtResource( 3 )]
position = Vector2( 460.5, -100 )

[node name="Down" parent="MissileLaunchers" instance=ExtResource( 3 )]
position = Vector2( 460.5, 612 )

[node name="LaunchTimer" type="Timer" parent="."]
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 921.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" parent="UI" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_top = 25.0
margin_right = 50.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 50, 20 )
align = 1

[node name="Wave" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -22.5
margin_right = 99.0
margin_bottom = 22.5
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 99, 22 )
custom_fonts/font = SubResource( 2 )
text = "Wave: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveAnim" type="AnimationPlayer" parent="UI/Wave"]
autoplay = "Wave"
anims/Wave = SubResource( 3 )

[node name="PlayerLives" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="Sprite" parent="UI/PlayerLives"]
position = Vector2( 41.5, 41 )
texture = ExtResource( 1 )

[node name="Life2" type="Sprite" parent="UI/PlayerLives"]
position = Vector2( 91.5, 41 )
texture = ExtResource( 1 )

[node name="Life3" type="Sprite" parent="UI/PlayerLives"]
position = Vector2( 141.5, 41 )
texture = ExtResource( 1 )

[node name="DeathScreen" type="ColorRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = 305.0
margin_right = 400.0
margin_bottom = 755.0
rect_pivot_offset = Vector2( 400, 225 )
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathMessage" type="Label" parent="UI/DeathScreen"]
anchor_right = 1.0
margin_top = 5.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Player Got Killed By Deadly
P-90 Missile"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="UI/DeathScreen"]
anchor_right = 1.0
margin_top = 131.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 5 )
text = "Time: 0:0:0"
align = 1
valign = 1

[node name="Wave" type="Label" parent="UI/DeathScreen"]
anchor_right = 1.0
margin_top = 195.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 5 )
text = "Wave: 1"
align = 1
valign = 1

[node name="Restart" type="Button" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = 49.0
margin_right = 104.5
margin_bottom = 95.0
rect_pivot_offset = Vector2( 107, 23 )
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = 124.0
margin_right = 124.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 124, 23 )
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 6 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowAnim" type="AnimationPlayer" parent="UI/DeathScreen"]
anims/ShowAnim = SubResource( 7 )

[node name="Fade" type="Node2D" parent="."]
z_index = 10

[node name="FadeInOut" type="ColorRect" parent="Fade"]
margin_right = 921.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeAnim" type="AnimationPlayer" parent="Fade"]
anims/FadeIn = SubResource( 8 )
anims/FadeOut = SubResource( 9 )
[connection signal="player_dead" from="Player" to="." method="_on_Player_player_dead"]
[connection signal="start" from="MissileLaunchers/Right" to="." method="_on_Right_start"]
[connection signal="start" from="MissileLaunchers/Left" to="." method="_on_Left_start"]
[connection signal="start" from="MissileLaunchers/Up" to="." method="_on_Up_start"]
[connection signal="start" from="MissileLaunchers/Down" to="." method="_on_Down_start"]
[connection signal="timeout" from="LaunchTimer" to="." method="_on_LaunchTimer_timeout"]
[connection signal="game_over" from="UI/Timer" to="." method="_on_Timer_game_over"]
[connection signal="next_wave" from="UI/Timer" to="." method="_on_Timer_next_wave"]
[connection signal="pressed" from="UI/DeathScreen/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/DeathScreen/MainMenu" to="." method="_on_MainMenu_pressed"]
